add update spec
